--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="styles" href="styles.css">
 </head>
 <body>
+    <header>
     <h1>WDD 330 Portfolio</h1>
+     </header>
     <h2>Block 1</h2>
   <ol>
       <li><a href="week1/">Week01</a></li>
@@ -15,4 +17,7 @@
       <li><a href="challenge1/index.html">Challenge 1: Todo</a></li>
   </ol>  
 </body>
+<footer>
+    
+</footer>
 </html>
