--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="portfolio" content="width=device-width, initial-scale=1.0">
     <title>Portfolio WDD 330</title>
-    <link rel="styles" href="styles.css">
+    <link rel="stylesheet" type = "text/css" href="styles.css">
 </head>
 <body>
     <header>
@@ -12,12 +12,19 @@
      </header>
     <h2>Block 1</h2>
   <ol>
-      <li><a href="week1/">Week01</a></li>
+      <li><a href="week1/week1.html">Week01</a></li>
       <li><a href="week2/">Week02</a></li>
       <li><a href="challenge1/index.html">Challenge 1: Todo</a></li>
   </ol>  
-</body>
+
 <footer>
-    
+    <p> 
+        &copy;
+            <span id="currentYear"></span> &star;&star;
+            Sarah Romero | Idaho |
+        <a href="http://www.byui.edu" target="_blank">BYU-Idaho</a>
+    </p>
 </footer>
+<script src="main.js"></script>
+</body>
 </html>
