--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -11,10 +11,8 @@
     <h1>WDD 330 Portfolio</h1>
      </header>
     <h2>Block 1</h2>
-  <ol>
-      <li><a href="week1/week1.html">Week01</a></li>
-      <li><a href="week2/">Week02</a></li>
-      <li><a href="challenge1/index.html">Challenge 1: Todo</a></li>
+  <ol id="tableOfContents">
+     
   </ol>  
 
 <footer>
