--- a/Portfolio/week1/week1-notes.html
+++ b/Portfolio/week1/week1-notes.html
@@ -11,10 +11,30 @@
     <h1>WDD 330 Portfolio</h1>
      </header>
      <h2>Notes</h2>
+     <h3>Master Mobile UX</h3>
      <p>
-
+      - We should design fo the smallest, focus on the content and core functionality. That is the key to make a simple and beautiful app.<br>
+      - The paradigm shift. People use more phones than computers. Moble traffic is up.<br>
+      - Build for mobile first."Just because your website is responsive, it doesn't mean it's mobile first."<br>
+      - Responsive Retrofitting: that's taking what you already have, and making it work on mobile. It is cheap, and prove a better experience.<br>
+      - Mobile is not a fad.<br>
+      - People use their THUMS to reach the phone. Reachability matters.<br>
+      - Placement matters.<br>
+      - Understanding matters.<br>
+      - "The Hamburger" is not very useful.<br>
+      - Reduce large information.<br>
+      - Before adverstasing, research.<br>
+      - No pop-up.<br>
      </p>
-
+     <h3>Activity-Story Writer</h3>
+     Story Name:<input id="name_input"></input>
+     <section>
+        <button onclick="loadStory()">Find and Edit It</button>
+         <button onclick="saveStory()">Save It</button>
+         <button onclick="displayStory()">Display It</button>
+     <textarea id="story_editor" placeholder="Write an awesome story here."></textarea>
+       <section id="story_display"></section>
+       </section>  
      <footer>
         <p> 
             &copy;
