--- a/Portfolio/week1/week1.html
+++ b/Portfolio/week1/week1.html
@@ -15,10 +15,13 @@
          <li>
              <a href="week1-notes.html">Week 1 notes/exercises</a>
          </li>
+    </ul>
+
      
      <h3>Questions:</h3>
       <ol>
-          <li></li>
+          <li>What is the Paradigm Shift? </li>
+          <li>Why do we still have to do respositve websites when we can do respositve retrofitting? How does that work?</li>
       </ol>
      </ul>
      <footer>
