--- a/Portfolio/week2/week2-notes.html
+++ b/Portfolio/week2/week2-notes.html
@@ -35,9 +35,21 @@
                 original array, starting at one position and finishing at another</li>
          </li>The splice() method removes items from an array then inserts new items in
          their place.</li>
-
-
-
+         <li>A while loop and do ... while loop can be used to repeat a block of code
+            while a condition is still true.</li>
+            <li>A for loop works in a similar way to a while loop, but has a different syntax</li>
+            <li>Parameters and arguments are terms that are often used interchangeably to
+                represent values provided for the function as an input. There is a subtle
+                difference though: any parameters a function needs are set when the function is
+                defined. When a function is invoked, it is provided with arguments.
+                </li>
+                <li>Function declarations can be invoked before they are defined because they are
+                    hoisted to the top of the scope, but function expressions cannot be invoked
+                    until after they are defined.
+                    </li>
+                    <li>A callback is a function that is provided as an argument to another function.</li>
+                <h2>Activity</h2>
+                
 
      <footer>
         <p> 
