--- a/Portfolio/week4/week4-notes.html
+++ b/Portfolio/week4/week4-notes.html
@@ -11,9 +11,22 @@
     <h1>WDD 330 Portfolio</h1>
      </header>
      <h2>Notes</h2>
-
-
-
+     <ul>
+     <li>A form is the main component of Google’s home page, and most of us use forms every day to log in to our favorite sites.</li>
+     <li>Forms are made up of a <form> element that contains form controls such as input fields, select menus and buttons. These input fields can be populated with information that is processed once the form has been submitted.</li>
+    <li>The focus event occurs when an element is focused on. In the case of an "input" element, this is when the cursor is placed inside the element (either by clicking or tapping on it or navigating to it using the keyboard). </li>
+    <li>Possibly the most important form event is the submit event, occurring when the form is submitted. Usually this will send the content of the form to the server to be processed, but we can use JavaScript to intercept the form before it’s sent by adding a submit event listener. </li>
+    <li> "input" fields, including text, passwords, check boxes, radio buttons, and file uploads.</li>
+    <li>"select" menus for drop-down lists of options.</li>
+    <li>"textarea" elements for longer text entry.</li>
+    <li>"button" elements for submitting and resetting forms</li>
+    <li> input type='password' is used to enter passwords or secret information. This works in the same way as an input field with type='text' , except the characters are concealed as they are entered so they’re unable to be read on the screen.</li>
+    <li>Check boxes are created using input fields with type='checkbox' . They are used to select different options that can be checked (true) or left unchecked (false). </li>
+    <li>Hidden fields can be created using input fields with type='hidden' . These are not displayed by the browser, but have a 'value' attribute that can contain information that is submitted with the form. They are often used to send information such as settings or information that the user has already provided. </li>
+    <li>A file input field can be created using input fields with type='file' . These are used to upload files, and most browsers will provide a browse button or similar that lets users select a file from their file system.</li>
+    <li>The static keyword can be used in class declarations to create a static method. These are sometimes called class methods in other programming languages. A static method is called by the class directly rather than by instances of the class.</li>
+    <li>A mixin is a way of adding properties and methods of some objects to another object without using inheritance. It allows more complex objects to be created by ‘mixing’ basic objects together. Basic mixin functionality is provided by the Object.assign() method.</li>
+</ul>
 
      <footer>
         <p> 
