--- a/Portfolio/week4/week4.html
+++ b/Portfolio/week4/week4.html
@@ -10,7 +10,7 @@
     <header>
     <h1>WDD 330 Portfolio</h1>
      </header>
-     <h2>Week3</h2>
+     <h2>Week4</h2>
      <ul>
          <li>
              <a href="week4-notes.html">Week 4 notes/exercises</a>
@@ -20,10 +20,12 @@
      
      <h3>Questions:</h3>
       <ol>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>How does Event forms work?</li>
+      <li>What is Radio Button Input Fields? Examples</li>
+      <li>What is a Polymorphism?</li>
+      <li>What is Prototypal Inheritance?</li>
+      <li>What is the differece between private and public method?</li>
+      <li>how do you creating Objects from Other Objects? </li>
     </ol>
 </ul> 
 <footer>
