--- a/week6/index-w6.html
+++ b/week6/index-w6.html
@@ -5,18 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo List</title>
-    <script src="main.js" type="module"></script>
+    <link rel="stylesheet" type="text/css" href="todo.css">
+    <script src="main-w6.js" type="module"></script>
 </head>
 
 <body>
-    <h1>Todo</h1>
+    <h1>My To Do List</h1>
     <header>
         <input type="text" id="todoInput" />
         <button id="addButton">Add</button>
     </header>
     <main>
         <ul id="todoList">
-            <li data-id="date">TodoText</li>
+            <li data-id="date">Go to class</li>
+            <li>Go to run.</li>
+            <li>Do homework.</li>
+            <li>Go to swin.</li>
+            <li>Read books.</li>
+            <li>Make two posts per week on my social media.</li>
         </ul>
     </main>
 </body>
