--- a/Portfolio/week7/week7-notes.html
+++ b/Portfolio/week7/week7-notes.html
@@ -20,6 +20,9 @@
             object that is provided as an argument.</li>
         <li>A callback is a function that’s provided as an argument to another function.</li>
         <li>A recursive function will keep invoking itself until a certain condition is met.</li>
+        <li>A generator is created by placing an asterisk character (*) after the function keyword.</li>
+        <li>A generator function will return an iterator object that provides a next() method, which returns the next
+            value in a sequence that is defined in the generator function.</li>
         <li>The web of computers known as the internet can be separated into two parts: clients and servers. A client,
             such as a web browser, will request a resource (usually a web page) from a server, which processes the
             request and sends back a response to the client.</li>
@@ -36,6 +39,18 @@
         <li>XML: When the term Ajax was originally coined, XML documents were often used to return data. Many different
             types of data can be sent, but by far the most commonly used in Ajax nowadays is JSON, which is more
             lightweight and easier to parse than XML</li>
+        <li>The text() method takes a stream of text from the response, reads it to completion and then returns a
+            promise that resolves to a USVSting object that can be treated as a string in JavaScript.</li>
+        <li>The blob() method is used to read a file of raw data, such as an image or a spreadsheet. Once it has read
+            the whole file, it returns a promise that resolves with a blob object.</li>
+        <li> The json() method is used to deal with these by transforming a stream of JSON data into a promise that
+            resolves to a JavaScript object.</li>
+        <li>HTTPheadersare used to pass on any additional information about a request or response. Typical information
+            contained in headers includes the file-type of the resource, cookie information, authentication information
+            and when the resource was last modified.</li>
+        <li>The Response interface allows you to control the response received from a request or to create your own
+            response objects.The Request interface allows you to create a request object that contains information about
+            the request being made, such as the URL and headers.</li>
     </ul>
 
     <footer>
