--- a/Portfolio/week7/week7.html
+++ b/Portfolio/week7/week7.html
@@ -21,7 +21,8 @@
 
 
     <h3>Questions:</h3>
-
+    <li>what is Memoization?</li>
+    <li>How can we create a Promise?</li>
     <p</p> <footer>
         <p>
             &copy;
