--- a/Portfolio/week8/week8-notes.html
+++ b/Portfolio/week8/week8-notes.html
@@ -13,7 +13,17 @@
         <h1>WDD 330 Portfolio</h1>
     </header>
     <h2>Notes</h2>
+    <ul>
+        <li>We can manipulate an element’s appearance using transform functions.</li>
+        <li>Translation functions allow you to move elements left, right, up, or down.</li>
+        <li> When you employ a translation function, you’re moving elements without impacting the flow of the document.
+        </li>
+        <li>translate(x,y) function moves an element x from the left, and y from the top.</li>
+        <li>If you only want to move an element vertically or horizontally, you can use the translatex or translatey
+            functions respectively.</li>
+        <li></li>
 
+    </ul>
     <footer>
         <p>
             &copy;
