--- a/Portfolio/week8/week8-notes.html
+++ b/Portfolio/week8/week8-notes.html
@@ -21,8 +21,11 @@
         <li>translate(x,y) function moves an element x from the left, and y from the top.</li>
         <li>If you only want to move an element vertically or horizontally, you can use the translatex or translatey
             functions respectively.</li>
+        <li>Transforms don’t work on inline elements.But, we can fix it by display: inline-block</li>
+        <li>The scale(x,y) function scales an element by the defined factors horizontally then vertically.</li>
         <li></li>
-
+        <li></li>
+        <li></li>
     </ul>
     <footer>
         <p>
