--- a/Portfolio/week8/week8-notes.html
+++ b/Portfolio/week8/week8-notes.html
@@ -23,9 +23,21 @@
             functions respectively.</li>
         <li>Transforms don’t work on inline elements.But, we can fix it by display: inline-block</li>
         <li>The scale(x,y) function scales an element by the defined factors horizontally then vertically.</li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>The rotate() function rotates an element around the point of origin by a specified angle value.</li>
+        <li>The skew(x,y) function specifies a skew along the x and y axe.</li>
+        <li>The order of transform functions does matter.</li>
+        <li>The transition-property property defines the CSS properties of the element that should be transitioned, with
+            all for all properties being the default.</li>
+        <li>The transition-duration property sets how long the transition will take.</li>
+        <li>The transition-timing-function lets you control the pace of the transition in even more granular detail.
+        </li>
+        <li>The default ease has a slow start, then it speeds up, and ends slowly.ease-in-out is similar to ease , but
+            accelerates more sharply at the beginning. linear creates a transition that animates at a constant speed.
+            ease-in creates a transition that is slow to start but gains speed, then stops abruptly. The opposite,
+            ease-out , starts at full speed, then slows progressively as it reaches the conclusion of the transition
+        </li>
+        <li>Akeyframeis a snapshot that defines a starting or end point of any smooth transition. </li>
+        <li>CSS animations, unlike transitions, allow you to control each step of an animation via keyframes.</li>
     </ul>
     <footer>
         <p>
