--- a/Portfolio/week8/week8-notes.html
+++ b/Portfolio/week8/week8-notes.html
@@ -38,6 +38,13 @@
         </li>
         <li>Akeyframeis a snapshot that defines a starting or end point of any smooth transition. </li>
         <li>CSS animations, unlike transitions, allow you to control each step of an animation via keyframes.</li>
+        <li> SVG stands forScalable Vector Graphics, a specific file format that allows you to describe vector graphics
+            using XML. A major selling point of vector graphics in general is that, unlike bitmap images (such as GIF,
+            JPEG, PNG, and TIFF), vector images preserve their quality even as you blow them up or shrink them down. We
+            can use SVG to do many of the same tasks we can do with canvas, including drawing paths, shapes, text,
+            gradients, and patterns.</li>
+        <li>XML stands for eXtensible Markup Language. Like HTML, it’s a markup metalanguage.</li>
+        <li> XML tags be used to describe data, such as the content of a file.</li>
     </ul>
     <footer>
         <p>
