--- a/Portfolio/week8/week8.html
+++ b/Portfolio/week8/week8.html
@@ -18,11 +18,8 @@
             <a href="week8-notes.html">Week 8 notes/exercises</a>
         </li>
     </ul>
-
-
     <h3>Questions:</h3>
-    <li></li>
-    <li></li>
+    <li>What does the "canvas" tag?</li>
     <p</p> <footer>
         <p>
             &copy;
