--- a/Portfolio/week9/week9-notes.html
+++ b/Portfolio/week9/week9-notes.html
@@ -14,7 +14,13 @@
     </header>
     <h2>Notes</h2>
     <ul>
-
+        <li>The Browser Object Model (or BOM for short) is a collection of properties and methods that contain
+            information about the browser and computer screen.</li>
+        <li>Every browser window, tab, popup, frame, and iframe has a window object.</li>
+        <li>Global variables are actual properties of a global object. In a browser environment, the global object is
+            the window object. This means that any global variable created is actually a property of the window object.
+        </li>
+        <Li>parseInt() and isNaN() , are actually methods of the global object.</Li>
     </ul>
     <footer>
         <p>
