--- a/Portfolio/week9/week9-notes.html
+++ b/Portfolio/week9/week9-notes.html
@@ -20,7 +20,7 @@
         <li>Global variables are actual properties of a global object. In a browser environment, the global object is
             the window object. This means that any global variable created is actually a property of the window object.
         </li>
-        <Li>parseInt() and isNaN() , are actually methods of the global object.</Li>
+        <li>parseInt() and isNaN() , are actually methods of the global object.</li>
     </ul>
     <footer>
         <p>
