--- a/Portfolio/week9/week9-notes.html
+++ b/Portfolio/week9/week9-notes.html
@@ -21,6 +21,51 @@
             the window object. This means that any global variable created is actually a property of the window object.
         </li>
         <li>parseInt() and isNaN() , are actually methods of the global object.</li>
+        <li>The window object has a navigator property that returns a reference to the Navigator object. The Navigator
+            object contains information about the browser being used. Its userAgent property will return information
+            about the browser and operating system being used</li>
+        <li>The window.location property is an object that contains information about the URL of the current page. It
+            contains a number of properties that provide information about different fragments of the URL.</li>
+        <li>The protocol property returns a string describing the protocol used (such as http , https , pop2 , ftp etc.)
+        </li>
+        <li>The host property returns a string describing the domain of the current URLandthe port number .</li>
+        <li>The hostname property returns a string describing the domain of the current URL</li>
+        <li>The port property returns a string describing the port number, although it will return an empty string if
+            the port is not explicitly stated </li>
+        <li>The pathname property returns a string of the path that follows the domain</li>
+        <li>The search property returns a string that starts with a “?” followed by the query string parameters.</li>
+        <li>The hash property returns a string that starts with a “#” followed by the fragment identifier. </li>
+        <li>The origin property returns a string that shows the protocol and domain where the current page originated
+            from.</li>
+        <li>The window.location object also has the following methods:The reload() method can be used to force a reload
+            of the current page. If it’s given a parameter of true , it will force the browser to reload the page from
+            the server, instead of using a cached page.<br>
+            The assign() method can be used to load another resource from a URL provided as a parameter.<br>
+            The replace() method is almost the same as the assign() method, except the current page will not be stored
+            in the session history, so the user will be unable to navigate back to it using the back button.<br>
+            The toString() method returns a string containing the whole URL:</li>
+        <li>The window.history object keeps information about the pages that have been visited in the session.</li>
+        <li>The window.screen object provides information about the user’s screen.</li>
+        <li>The window.setTimeout() method can be used to invoke a function after a set amount of time. It can be
+            canceled using the clearTimeout() method.</li>
+        <li>The window.setInterval() method can be used to repeatedly invoke a function. It can be stopped using the
+            clearInterval() method.</li>
+        <li>The window.requestAnimationFrame() method can be used to produce smooth and optimized animation by utilizing
+            the browser's built-in graphics capabilities. It can be canceled using the cancelAnimationFrame() method.
+        </li>
+        <li>The Web Storage API provides a key-value store on the client’s computer that is similar to using cookies but
+            has fewer restrictions, more storage capacity, and is generally easier to use. </li>
+        <li>data- attributes help to embed custom data into a web page that can then be used to enhance the user
+            experience with JavaScript.</li>
+        <li>The Geolocation API allows you to access the geographic coordinates of the user’s device, as long as the
+            user gives permission.</li>
+        <li>The Web Worker API can be used to perform computationally intensive tasks in the background, which helps to
+            avoid websites becoming unresponsive.</li>
+        <li>The <audio> and <video> elements can be employed to embed audio tracks and video clips in a web page. They
+                    also have a Media API that can help control the playback using JavaScript.</li>
+        <li>Websockets are a new protocol for communicating over the internet, and allow real-time, two-way
+            communication.</li>
+        <li>A shim or polyfill is a piece of code that adds support of missing features to older browsers.</li>
     </ul>
     <footer>
         <p>
