--- a/Portfolio/week9/week9.html
+++ b/Portfolio/week9/week9.html
@@ -19,7 +19,7 @@
         </li>
     </ul>
     <h3>Questions:</h3>
-    <li>I don't have questions</li>
+    <li>I don't have any questions</li>
     <p</p> <footer>
         <p>
             &copy;
