--- a/Portfolio/week10/week10-notes.html
+++ b/Portfolio/week10/week10-notes.html
@@ -5,30 +5,26 @@
     <meta charset="UTF-8">
     <meta name="portfolio" content="width=device-width, initial-scale=1.0">
     <title>Portfolio WDD 330</title>
-    <link rel="stylesheet" type="text/css" href="week9.css">
+    <link rel="stylesheet" type="text/css" href="week10.css">
 </head>
 
 <body>
     <header>
         <h1>WDD 330 Portfolio</h1>
     </header>
-    <h2>Week9</h2>
+    <h2>Notes</h2>
     <ul>
-        <li>
-            <a href="week9-notes.html">Week 9 notes/exercises</a>
-        </li>
+        <li></li>
     </ul>
-    <h3>Questions:</h3>
-    <li>I don't have any questions</li>
-    <p</p> <footer>
+    <footer>
         <p>
             &copy;
             <span id="currentYear"></span> &star;&star;
             Sarah Romero | Idaho |
             <a href="http://www.byui.edu" target="_blank">BYU-Idaho</a>
         </p>
-        </footer>
-        <script src="week9.js"></script>
+    </footer>
+    <script src="week10.js"></script>
 </body>
 
 </html>
