--- a/Portfolio/week10/week10-notes.html
+++ b/Portfolio/week10/week10-notes.html
@@ -14,7 +14,43 @@
     </header>
     <h2>Notes</h2>
     <ul>
-        <li></li>
+        <li>client-side form validation: to ensure all required form controls are filled out, in the correct format.
+            Also, it helps ensure data submitted matches the requirements set forth in the various form controls.
+        </li>
+        <li>client-side validation should not be considered an exhaustive security measure because client-side
+            validation is too easy to bypass, so malicious users can still easily send bad data through to your server.
+        </li>
+        <li>Validation done in the browser is called client-side validation, while validation done on the server is
+            called server-side validation.</li>
+        <li>Three main reasons for the validation form: We want to get the right data, in the right format, We want to
+            protect our users' data, and We want to protect ourselves. </li>
+        <li>Different types of client-side validation: Built-in form validation uses HTML5 form validation features,
+            which we've discussed in many places throughout this module. This validation generally doesn't require much
+            JavaScript. Built-in form validation has better performance than JavaScript, but it is not as customizable
+            as JavaScript validation. JavaScript validation is coded using JavaScript. This validation is completely
+            customizable, but you need to create it all (or use a library).</li>
+        <li>The Fetch API provides a JavaScript interface for accessing and manipulating parts of the HTTP pipeline,
+            such as requests and responses. It also provides a global fetch() method that provides an easy, logical way
+            to fetch resources asynchronously across the network.</li>
+        <li>The fetch specification differs from jQuery.ajax() in three main ways:<br>
+
+            The Promise returned from fetch() won’t reject on HTTP error status even if the response is an HTTP 404 or
+            500. Instead, it will resolve normally (with ok status set to false), and it will only reject on network
+            failure or if anything prevented the request from completing.<br>
+            fetch() won't can receive cross-site cookies; you can’t can establish a cross site session using fetch.
+            Set-Cookie headers from other sites are silently ignored.<br>
+            fetch won’t send cookies, unless you set the credentials init option. (Since Aug 25, 2017. The spec changed
+            the default credentials policy to same-origin. Firefox changed since 61.0b13.)</li>
+        <li>The Headers interface allows you to create your own headers object via the Headers()constructor.</li>
+        <li> Response instances are returned when fetch() promises are resolved.<br>
+
+            The most common response properties you'll use are:<br>
+
+            Response.status — An integer (default value 200) containing the response status code.<br>
+            Response.statusText — A string (default value "OK"), which corresponds to the HTTP status code message.<br>
+            Response.ok — seen in use above, this is a shorthand for checking that status is in the range 200-299
+            inclusive. This returns a Boolean.</li>
+
     </ul>
     <footer>
         <p>
