--- a/Portfolio/week10/week10.html
+++ b/Portfolio/week10/week10.html
@@ -19,16 +19,18 @@
         </li>
     </ul>
     <h3>Questions:</h3>
-    <li></li>
-    <p</p> <footer>
+    <li>What are Regexs? and why is complex to use it? </li>
+    <li>When is better to use a javascript form validation?</li>
+
+    <footer>
         <p>
             &copy;
             <span id="currentYear"></span> &star;&star;
             Sarah Romero | Idaho |
             <a href="http://www.byui.edu" target="_blank">BYU-Idaho</a>
         </p>
-        </footer>
-        <script src="week10.js"></script>
+    </footer>
+    <script src="week10.js"></script>
 </body>
 
 </html>
