--- a/Portfolio/week9/week9.html
+++ b/Portfolio/week9/week9.html
@@ -20,15 +20,15 @@
     </ul>
     <h3>Questions:</h3>
     <li>I don't have any questions</li>
-    <p</p> <footer>
+    <footer>
         <p>
             &copy;
             <span id="currentYear"></span> &star;&star;
             Sarah Romero | Idaho |
             <a href="http://www.byui.edu" target="_blank">BYU-Idaho</a>
         </p>
-        </footer>
-        <script src="week9.js"></script>
+    </footer>
+    <script src="week9.js"></script>
 </body>
 
 </html>
