--- a/Portfolio/Challenge02/booksearch.html
+++ b/Portfolio/Challenge02/booksearch.html
@@ -11,10 +11,10 @@
 <body>
     <div class="container">
         <h1>Book Search App</h1>
-        <form id="myform">
+        <div id="myform">
             <input id="search" placeholder="Search Book" class="center-block" size="20">
             <button class="btn" id="button" size="50">Submit</button>
-        </form>
+        </div>
     </div>
     <div id="results" class="results"></div>
     <script src="book.js"></script>
