--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>WDD 330 Portfolio</h1>
     </header>
-    <h2>Block 1</h2>
+    <h2>Assignments</h2>
     <ol id="tableOfContents">
 
     </ol>
